// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Radio Binary invalid renders correctly 1`] = `
<fieldset
  class="ecl-form-group ecl-form-group--radio ecl-radio__group--binary"
>
  <div
    class="ecl-help-block"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-feedback-message"
  >
    Error message for the group
  </div>
  <div
    class="ecl-radio"
  >
    <input
      checked=""
      class="ecl-radio__input"
      id="radio-binary-invalid-1"
      name=""
      type="radio"
      value="yes"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-invalid-1"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      />
      Yes
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-binary-invalid-2"
      name=""
      type="radio"
      value="no"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-invalid-2"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      />
      No
    </label>
  </div>
</fieldset>
`;

exports[`EC - Radio Binary renders correctly 1`] = `
<fieldset
  class="ecl-form-group ecl-form-group--radio ecl-radio__group--binary"
>
  <div
    class="ecl-help-block"
  >
    Helper text for the group
  </div>
  <div
    class="ecl-radio"
  >
    <input
      checked=""
      class="ecl-radio__input"
      id="radio-binary-1"
      name=""
      type="radio"
      value="yes"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-1"
    >
      <span
        class="ecl-radio__box"
      />
      Yes
    </label>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      class="ecl-radio__input"
      id="radio-binary-2"
      name=""
      type="radio"
      value="no"
    />
    <label
      class="ecl-radio__label"
      for="radio-binary-2"
    >
      <span
        class="ecl-radio__box"
      />
      No
    </label>
  </div>
</fieldset>
`;

exports[`EC - Radio Default renders correctly 1`] = `
<fieldset
  class="ecl-form-group ecl-form-group--radio"
>
  <div
    class="ecl-help-block"
  >
    This is the group's helper text.
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-1"
      checked=""
      class="ecl-radio__input"
      id="radio-default-1"
      name=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box"
      />
      Luxembourg
    </label>
    <div
      class="ecl-help-block ecl-radio__help"
      id="helper-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-2"
      class="ecl-radio__input"
      id="radio-default-2"
      name=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box"
      />
      Belgium
    </label>
    <div
      class="ecl-help-block ecl-radio__help"
      id="helper-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      aria-describedby="helper-3"
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled"
      />
      France (disabled)
    </label>
    <div
      class="ecl-help-block ecl-radio__help ecl-help-block--disabled"
      id="helper-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`EC - Radio Default renders correctly with extra attributes 1`] = `
<fieldset
  class="ecl-form-group ecl-form-group--radio"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-help-block"
  >
    This is the group's helper text.
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-1"
      checked=""
      class="ecl-radio__input"
      id="radio-default-1"
      name=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box"
      />
      Luxembourg
    </label>
    <div
      class="ecl-help-block ecl-radio__help"
      id="helper-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-2"
      class="ecl-radio__input"
      id="radio-default-2"
      name=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box"
      />
      Belgium
    </label>
    <div
      class="ecl-help-block ecl-radio__help"
      id="helper-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      aria-describedby="helper-3"
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled"
      />
      France (disabled)
    </label>
    <div
      class="ecl-help-block ecl-radio__help ecl-help-block--disabled"
      id="helper-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`EC - Radio Default renders correctly with extra class names 1`] = `
<fieldset
  class="ecl-form-group ecl-form-group--radio custom-class custom-class--test"
>
  <div
    class="ecl-help-block"
  >
    This is the group's helper text.
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-1"
      checked=""
      class="ecl-radio__input"
      id="radio-default-1"
      name=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-1"
    >
      <span
        class="ecl-radio__box"
      />
      Luxembourg
    </label>
    <div
      class="ecl-help-block ecl-radio__help"
      id="helper-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-2"
      class="ecl-radio__input"
      id="radio-default-2"
      name=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-2"
    >
      <span
        class="ecl-radio__box"
      />
      Belgium
    </label>
    <div
      class="ecl-help-block ecl-radio__help"
      id="helper-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      aria-describedby="helper-3"
      class="ecl-radio__input"
      disabled=""
      id="radio-default-3"
      name=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label"
      for="radio-default-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--disabled"
      />
      France (disabled)
    </label>
    <div
      class="ecl-help-block ecl-radio__help ecl-help-block--disabled"
      id="helper-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;

exports[`EC - Radio Invalid renders correctly 1`] = `
<fieldset
  class="ecl-form-group ecl-form-group--radio"
>
  <div
    class="ecl-help-block"
  >
    This is the group's helper text.
  </div>
  <div
    class="ecl-feedback-message"
  >
    This is the error message
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-1"
      checked=""
      class="ecl-radio__input"
      id="radio-invalid-1"
      name=""
      type="radio"
      value="lu"
    />
    <label
      class="ecl-radio__label"
      for="radio-invalid-1"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      />
      Luxembourg
    </label>
    <div
      class="ecl-help-block ecl-radio__help"
      id="helper-1"
    >
      Help text for option 1
    </div>
  </div>
  <div
    class="ecl-radio"
  >
    <input
      aria-describedby="helper-2"
      class="ecl-radio__input"
      id="radio-invalid-2"
      name=""
      type="radio"
      value="be"
    />
    <label
      class="ecl-radio__label"
      for="radio-invalid-2"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid"
      />
      Belgium
    </label>
    <div
      class="ecl-help-block ecl-radio__help"
      id="helper-2"
    >
      Help text for option 2
    </div>
  </div>
  <div
    class="ecl-radio ecl-radio--disabled"
  >
    <input
      aria-describedby="helper-3"
      class="ecl-radio__input"
      disabled=""
      id="radio-invalid-3"
      name=""
      type="radio"
      value="fr"
    />
    <label
      class="ecl-radio__label"
      for="radio-invalid-3"
    >
      <span
        class="ecl-radio__box ecl-radio__box--invalid ecl-radio__box--disabled"
      />
      France (disabled)
    </label>
    <div
      class="ecl-help-block ecl-radio__help ecl-help-block--disabled"
      id="helper-3"
    >
      Help text for option 3
    </div>
  </div>
</fieldset>
`;
